[tool.poetry]
name = "web-crawling"
version = "0.1.0"
description = ""
authors = ["Miyazono45"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.15.2"
numpy = "^1.26.2"
pandas = "^2.1.3"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
